--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.17.1",
     "express-graphql": "^0.8.0",
     "graphql": "^14.3.1",
-    "mongoose": "^5.6.1"
+    "js-sha256": "^0.9.0",
+    "mongoose": "^5.6.1",
+    "uid2": "0.0.3"
   }
 }
